//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table Users {
  id Int [pk, increment]
  firstName String
  lastName String
  profilePicture String
  dateOfBirth DateTime
  bio String
  gender GENDERS
  role USER_ROLES
  loginMethod LOGIN_METHODS [not null]
  email String
  phoneNumber String
  isProfileComplete Boolean [not null, default: false]
  fcmToken String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  UserAddress UserAddress [not null]
  UserOTP UserOTP [not null]
  DriverDetails DriverDetails [not null]
  UserPackages UserPackages [not null]
  UserNotifications UserNotifications [not null]
  Messages Messages [not null]
  JobRequests JobRequests [not null]
  JobOffers JobOffers [not null]
  Orders Orders [not null]
  Feedback Feedback [not null]
  DriversLocation DriversLocation
  driverReviews DriverReviews [not null]
  reviewedBy DriverReviews [not null]
  UserVehicles UserVehicles
  UserRescueCharges UserRescueCharges
  UserPreference UserPreference
  UserStatus UserStatus
}

Table UserAddress {
  id Int [pk, increment]
  userId Int [not null]
  country String [not null]
  state String [not null]
  city String [not null]
  streetAddress String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  User Users [not null]
}

Table UserOTP {
  id Int [pk, increment]
  userId Int [not null]
  otp String [not null]
  otpType OTPT_TYPE [not null]
  isExpired Boolean [not null, default: false]
  expirationDateTime DateTime [not null]
  createdAt DateTime [default: `now()`, not null]
  User Users [not null]
}

Table UserStatus {
  id Int [pk, increment]
  userId Int [unique, not null]
  isOnline Boolean [not null]
  lastSeen DateTime [not null]
  User Users [not null]
}

Table UserVehicles {
  id Int [pk, increment]
  userId Int [unique, not null]
  car String [not null]
  model String [not null]
  about String [not null]
  numberOfOccupants Int [not null]
  parkingLotInfo String [not null]
  roadsideLocationSafe Boolean [not null]
  numberOfMiles Int [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  User Users [not null]
}

Table DriverDetails {
  id Int [pk, increment]
  userId Int [not null]
  vehicleDetails String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  User Users [not null]
}

Table DriversLocation {
  id Int [pk, increment]
  userId Int [unique, not null]
  latitude Float [not null]
  longitude Float [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  User Users [not null]
}

Table Packages {
  id Int [pk, increment]
  name String [not null]
  description String [not null]
  price Float [not null]
  rescueChargesPerYear Int [not null]
  pricePerMile Float [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  UserPackages UserPackages [not null]
}

Table UserPackages {
  id Int [pk, increment]
  userId Int [not null]
  packageId Int [not null]
  isActive Boolean [not null, default: true]
  expireAt DateTime [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  User Users [not null]
  Package Packages [not null]
}

Table UserRescueCharges {
  id Int [pk, increment]
  userId Int [unique, not null]
  chargesUsed Int [not null]
  chargesRemaining Int [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  User Users [not null]
}

Table UserNotifications {
  id Int [pk, increment]
  userId Int [not null]
  title String [not null]
  description String [not null]
  hasSeen Boolean [not null, default: false]
  createdAt DateTime [default: `now()`, not null]
  User Users [not null]
}

Table UserPreference {
  id Int [pk, increment]
  userId Int [unique, not null]
  receivePushNotifications Boolean [not null]
  User Users [not null]
}

Table Conversations {
  id Int [pk, increment]
  user1Id Int [not null]
  user2Id Int [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  Messages Messages [not null]
  JobRequests JobRequests
}

Table Messages {
  id Int [pk, increment]
  conversationId Int [not null]
  senderId Int [not null]
  content String [not null]
  createdAt DateTime [default: `now()`, not null]
  Conversation Conversations [not null]
  User Users [not null]
}

Table DriverReviews {
  id Int [pk, increment]
  driverId Int [not null]
  userId Int [not null]
  rating Int [not null]
  comment String [not null]
  createdAt DateTime [default: `now()`, not null]
  Driver Users [not null]
  Reviewer Users [not null]
}

Table JobRequests {
  id Int [pk, increment]
  userId Int [not null]
  latitude Float [not null]
  longitude Float [not null]
  milesRequired Int [not null]
  radius Float [not null]
  chargingType String [not null]
  hasAccepted Boolean [not null, default: false]
  hasPaid Boolean [not null, default: false]
  hasLeftReview Boolean [not null, default: false]
  conversationId Int [unique]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  User Users [not null]
  Conversation Conversations
  JobOffers JobOffers [not null]
}

Table JobOffers {
  id Int [pk, increment]
  jobRequestId Int [not null]
  driverId Int [not null]
  status JOB_STATUS [not null, default: 'SENT']
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  JobRequest JobRequests [not null]
  Driver Users [not null]
}

Table ProductCategories {
  id Int [pk, increment]
  name String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  Products Products [not null]
}

Table Products {
  id Int [pk, increment]
  categoryId Int [not null]
  name String [not null]
  description String [not null]
  price Decimal [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  ProductCategory ProductCategories [not null]
  ProductImages ProductImages [not null]
  OrderDetails OrderDetails [not null]
}

Table ProductImages {
  id Int [pk, increment]
  productId Int [not null]
  path String [not null]
  isPrimary Boolean [not null]
  createdAt DateTime [default: `now()`, not null]
  Product Products [not null]
}

Table Orders {
  id Int [pk, increment]
  userId Int [not null]
  status ORDER_STATUS [not null, default: 'PENDING']
  totalAmount Float [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  User Users [not null]
  OrderDetails OrderDetails [not null]
}

Table OrderDetails {
  id Int [pk, increment]
  orderId Int [not null]
  productId Int [not null]
  quantity Int [not null]
  price Float [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  Order Orders [not null]
  Product Products [not null]
}

Table Feedback {
  id Int [pk, increment]
  userId Int [not null]
  text String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  User Users [not null]
  FeedbackImages FeedbackImages [not null]
}

Table FeedbackImages {
  id Int [pk, increment]
  feedbackId Int [not null]
  path String [not null]
  createdAt DateTime [default: `now()`, not null]
  Feedback Feedback [not null]
}

Table ResidentialPowerOutage {
  id Int [pk, increment]
  fullName String [not null]
  address String [not null]
  phone String [not null]
  time String [not null]
  NoOfFloors String [not null]
  SqFt String [not null]
  noOfStories String [not null]
  elevator String [not null]
  requireHardHad String [not null]
  describeSituation String [not null]
  noOfItemsNeededToPower String [not null]
  noOfLights String [not null]
  TTLWatts String [not null]
  noOfHoursPowerIsNeeded String [not null]
  listItemsNeededToPower String [not null]
  createdAt DateTime [default: `now()`, not null]
}

Table CommercialOrFleetServices {
  id Int [pk, increment]
  companyName String [not null]
  numberOfCars String [not null]
  intervals String [not null]
  averageChargeLevel String [not null]
  typeOfVehicle String [not null]
  address String [not null]
  createdAt DateTime [default: `now()`, not null]
}

Table ConstructionSite {
  id Int [pk, increment]
  fullName String [not null]
  address String [not null]
  phone String [not null]
  time String [not null]
  NoOfFloors String [not null]
  SqFt String [not null]
  noOfStories String [not null]
  elevator String [not null]
  requireHardHad String [not null]
  describeSituation String [not null]
  noOfItemsNeededToPower String [not null]
  noOfLights String [not null]
  TTLWatts String [not null]
  noOfHoursPowerIsNeeded String [not null]
  listItemsNeededToPower String [not null]
  createdAt DateTime [default: `now()`, not null]
}

Table Campsite {
  id Int [pk, increment]
  fullName String [not null]
  address String [not null]
  phone String [not null]
  time String [not null]
  NoOfFloors String [not null]
  SqFt String [not null]
  noOfStories String [not null]
  elevator String [not null]
  requireHardHad String [not null]
  describeSituation String [not null]
  noOfItemsNeededToPower String [not null]
  noOfLights String [not null]
  TTLWatts String [not null]
  noOfHoursPowerIsNeeded String [not null]
  listItemsNeededToPower String [not null]
  createdAt DateTime [default: `now()`, not null]
}

Enum USER_ROLES {
  USER
  DRIVER
  ADMIN
}

Enum GENDERS {
  MALE
  FEMALE
  OTHER
}

Enum OTPT_TYPE {
  PHONE_NUMBER
  EMAIL
}

Enum JOB_STATUS {
  SENT
  ACCEPTED
  DECLINED
  EXPIRED
  DONE
}

Enum ORDER_STATUS {
  PENDING
  COMPLETE
}

Enum LOGIN_METHODS {
  EMAIL
  PHONE_NUMBER
  GOOGLE
  FACEBOOK
  APPLE
}

Ref: UserAddress.userId > Users.id [delete: Cascade]

Ref: UserOTP.userId > Users.id [delete: Cascade]

Ref: UserStatus.userId - Users.id [delete: Cascade]

Ref: UserVehicles.userId - Users.id [delete: Cascade]

Ref: DriverDetails.userId > Users.id [delete: Cascade]

Ref: DriversLocation.userId - Users.id [delete: Cascade]

Ref: UserPackages.userId > Users.id [delete: Cascade]

Ref: UserPackages.packageId > Packages.id

Ref: UserRescueCharges.userId - Users.id [delete: Cascade]

Ref: UserNotifications.userId > Users.id [delete: Cascade]

Ref: UserPreference.userId - Users.id [delete: Cascade]

Ref: Messages.conversationId > Conversations.id [delete: Cascade]

Ref: Messages.senderId > Users.id

Ref: DriverReviews.driverId > Users.id

Ref: DriverReviews.userId > Users.id

Ref: JobRequests.userId > Users.id

Ref: JobRequests.conversationId - Conversations.id

Ref: JobOffers.jobRequestId > JobRequests.id

Ref: JobOffers.driverId > Users.id

Ref: Products.categoryId > ProductCategories.id

Ref: ProductImages.productId > Products.id [delete: Cascade]

Ref: Orders.userId > Users.id

Ref: OrderDetails.orderId > Orders.id [delete: Cascade]

Ref: OrderDetails.productId > Products.id

Ref: Feedback.userId > Users.id

Ref: FeedbackImages.feedbackId > Feedback.id [delete: Cascade]